# joshmorin.github.io

./: index.html  update_docs.sh
documentation/: search-index.js
documentation.bkup/: search-index.js
documentation.bkup/moid/: fn.delay.html  fn.repeat.html  struct.MoidSpec.html
documentation.bkup/shams/: struct.Date.html  struct.YearIter.html
documentation/__documentation/: Cargo.toml
documentation/hw/: enum.ErrorKind.html  fn.display_brightness.html  fn.display_off.html  fn.display_on.html  fn.power_off.html  fn.power_reboot.html  fn.power_restart.html  fn.power_shutdown.html  fn.speaker_mute.html  fn.speaker_unmute.html  fn.speaker_volume.html  index.html  sidebar-items.js  struct.Display.html  struct.Error.html  struct.Hw.html  struct.PlatformHw.html  struct.Speaker.html  struct.System.html  type.Result.html
documentation/mimty/: fn.file.html  sidebar-items.js  type.MimeType.html
documentation/moid/: fn.repeat.html  fn.spin.html  index.html  struct.MoidHandle.html  struct.MoidSet.html
documentation/network_integer/: fn.bytes_to_integer.html  fn.integer_to_bytes.html  index.html  sidebar-items.js  struct.Slice.html  trait.Integer.html
documentation/shams/: index.html  struct.Duration.html  struct.ShamsDay.html  struct.ShamsSpec.html  struct.ShamsYear.html
documentation/shams-time/: sidebar-items.js
documentation/shams_time/: index.html  sidebar-items.js  struct.Date.html  struct.Duration.html  struct.ShamsDay.html  struct.ShamsTime.html  struct.ShamsTimeSpec.html  struct.Time.html  struct.YearIter.html
documentation/zoj/: fn.build.html  (+3 more)
(+78 files in other folders)
